[package]
name = "r2d2_cypher"
version = "0.4.1"
license = "MIT"
edition = "2018"
authors = ["Kevin Brendle <khbrendle93@gmail.com>"]
repository = "https://github.com/khbrendle/r2d2-cypher"
description = "Cypher support for the r2d2 connection pool"
readme = "README.md"

keywords = ["cypher", "neo4j", "r2d2"]

[dependencies]
r2d2 = "0.8"
rusted_cypher = { version = "1.1.1", git = "https://github.com/khbrendle/rusted-cypher"}
